2011-01-30
* don't scan block devices or character devices
* don't enable ubifs, since I have not added the code yet :-/
* add code to store the configuration globally

2011-01-29
* add -d to cpio, so it actually creates directories
* add unpacking RPMs. RPM contains a gzip file so we get some duplicates.
* actually enable bzip2 in the standard configuration, sigh.

2011-01-27
* add stubs for using Ninka to get licensing information per file

2011-01-26
* return the type of the squashfs file system we find. We don't yet use the
information, but eventually we will use it to choose the right unpacker for
squashfs, and be able to add some more meta information about what kind of
squashfs file system it is.
* update the README, it was still very old (and still can use cleanups)
* add mtd-utils-ubi as a dependency for the RPM (package name needs to be
checked for DEB)

2011-01-25
* cleanups
* add markers for ubifs (used a lot on Android)

2011-01-24
* (finally) add support for bzip2 archives

2011-01-20
* add option to switch between absolute and relative reporting of paths, to
make unpacked files easier to find in /tmp after a scan
* always report both absolute and relative paths, remove switch
* unpack into a single directory, instead of scattering things over lots of
directories in /tmp. This makes it easier to pack the results of a scan for
later analysis.

2011-01-17
* add configuration for BusyBox 1.18.2
* bump version number to 4.0

2011-01-13
* last PyLucene dependencies removed
* rename name2program.py to program2package.py
* add a hack to fix different paths for unsquashfs

2011-01-07
* various cleanups

2011-01-06
* various cleanups

2010-12-28
* make a configuration file for bruteforce.py mandatory
* add configuration, plus default configuration, to bat.busybox.py
* add documentation for generating RPMs

2010-12-22
* add configuration for BusyBox 1.18.1

2010-12-20
* remove dependency on PyLucene, replace with sqlite3

2010-12-15